--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,10 @@ action = "*"
 basepage = "*"
 pages = "*"
 init = "*"
+expect = "*"
+expects = "==0.8.0"
+pytest-expect = "*"
+eql = "*"
 
 [requires]
 python_version = "3.8"
